--- a/gtk-3.0/Stylus/Bars.styl
+++ b/gtk-3.0/Stylus/Bars.styl
@@ -5,7 +5,7 @@
 
 
 /* TROUGH - Governs the inset area that appears underneath many bar-like controls. */
-.trough
+trough
     shallow-inset();
     background-image:   none;
     border-radius:      2em;
@@ -17,43 +17,38 @@
         color:              TextColor;
 
 /* GTKPROGRESSBAR - Governs ordinary vertical and horizontal progress bar controls. */
-.progressbar,
-GtkProgressBar,
-GtkProgressBar.progressbar
+progressbar
     -GtkProgressBar-min-horizontal-bar-height:  15;
     -GtkProgressBar-min-vertical-bar-width:     15;
 
-    background-image:           ProgressBarGradientVertical;
-    border:                     1px solid transparent;
-    border-radius:              2em;
-
-    &:backdrop
+    &:backdrop trough progress
         background-color:       ProgressBarColorDim;
         background-image:       none;
         color:                  TextColorHighlighted;
 
-    &.horizontal
+    &.horizontal trough progress
         background-image:       ProgressBarGradientVertical;
         &:backdrop
             background-color:   ProgressBarColorDim;
             background-image:   none;
-        &.trough, &.trough:backdrop
-            @extends .trough;
-    &.vertical
+        trough, trough:backdrop
+            @extends trough;
+    &.vertical trough progress
         background-image:       ProgressBarGradientHorizontal;
         &:backdrop
             background-color:   ProgressBarColorDim;
             background-image:   none;
-        &.trough, &.trough:backdrop
-            @extends .trough;
+        trough, trough:backdrop
+            @extends trough;
+
+    trough progress
+        border-radius:          2em;
 
 /* GTKLEVELBAR - Governs progress-bar-like controls generally meant for displaying discretized levels or statuses.
  *
  *      Password strength indicators are probably the most common example of this control.
  */
-.level-bar,
-GtkLevelBar,
-GtkLevelBar.level-bar
+levelbar
 
     &.horizontal
         -GtkLevelBar-min-block-height:      15;
@@ -77,7 +72,7 @@ GtkLevelBar.level-bar
     /* These are the discretized level meters. */
     &.indicator-discrete
         &.fill-block
-            @extends .trough;
+            @extends trough;
             &.horizontal
                 &.level-high        { background-image: vgradient(NominalColor); }
                 &.level-low         { background-image: vgradient(ErrorColor); }
@@ -94,49 +89,60 @@ GtkLevelBar.level-bar
             flat();
             padding: 0px;
 
-.primary-toolbar
+    trough, block.empty
+        @extends trough;
+
+        min-height:                         0.75em;
+        min-width:                          0.75em;
+        padding:                            0.125em;
+
+    block.filled.high
+        background-image:                   vgradient(NominalColor);
+        border-radius:                      2em;
+
+toolbar.horizontal
     border-bottom-color:    transparent;
     border-image:           -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 0 0 2 0 / 0px 0px 2px 0px stretch;
 
-.scale,
-GtkScale,
-GtkScale.scale
+scale
+
     -GtkRange-slider-width:         20;
     -GtkRange-trough-border:        0;
     -GtkScale-slider-length:        20;
     -GtkWidget-focus-line-width:    0;
 
-    &.horizontal
-        margin:                     0.25em 0em 0.25em 0em;
-        &.trough.highlight
-            background-image:       SelectionGradientVerticalInverted;
-
-    &.mark                          { color: TextColorDim; }
-
-    &.slider.horizontal,
-    &.slider.vertical
-        margin:                     0px;
-        background-clip:            border-box;
-        image:                      "Icons/Slider.svg";
-        &:backdrop                  { image: "Icons/Slider-Backdrop.svg"; }
-
-    &.trough
-        @extends .trough;
-        &.highlight:backdrop
+    &:backdrop trough
+        highlight:backdrop
             background-color:       HighlightColor;
             background-image:       none;
+        slider
+            image:                  "Icons/Slider-Backdrop.svg";
 
-    &.vertical
-        margin:                     0em 0.25em 0em 0.25em;
-        &.trough.highlight
-            background-image:       SelectionGradientHorizontalInverted;
-            &:backdrop
-                background-color:   HighlightColor;
-                background-image:   none;
+    &.horizontal trough highlight
+        background-image:           SelectionGradientVerticalInverted;
+        border-radius:              2em 0em 0em 2em;
 
+    &.vertical trough highlight
+        background-image:           SelectionGradientHorizontalInverted;
+        border-radius:              2em 2em 0em 0em;
 
-.separator
+    trough
+        @extends trough;
+
+        slider
+            background-color:       transparent;
+            background-size:        100% 100%;
+            min-width:              1em;
+            min-height:             1em;
+            image:                  "Icons/Slider.svg";
+
+separator
+    border-style:                   solid;
+    min-height:                     1px;
+    min-width:                      1px;
+
     &.horizontal
+        // image:                      -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 2 0 2 0 / 5px 0px 5px 0px stretch;
         border-image:   -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 1 0 1 0 / 1px 0px 1px 0px stretch;
     &.vertical
         border-image:   -gtk-scaled(url("Icons/Separator-Vertical.svg")) 0 1 0 1 / 0px 1px 0px 1px stretch;
